--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,6 +17,7 @@
   },
   "plugins": ["react", "import"],
   "rules": {
+    "no-underscore-dangle": "off",
     "no-console": "off",
     "no-restricted-syntax": [
       "error",
@@ -25,6 +26,7 @@
         "message": "You can only call the error() and warn() functions from the console object"
       }
     ],
+    "react/prop-types": 0,
     "react/react-in-jsx-scope": "off",
     "react/jsx-one-expression-per-line": "off"
   },
