--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "husky": "^7.0.0"
   },
   "dependencies": {
-    "axios": "^0.26.1",
-    "react-icons": "^4.3.1"
+    "axios": "^0.26.1"
   }
 }
